data/all_generated_tests/raw_wast_tests/br_if_IncorrectConditionEvaluation_1680.wast
;; 1. **Test Description:** Test `br_if` instruction with a true condition (non-zero value) to ensure the branch is taken properly. If the branch is always taken regardless of condition, it might indicate incorrect condition evaluation.    - **Specific Constraint:** Validate that condition (operand value) correctly triggers the branch.    - **Relation to Incorrect Condition Evaluation:** Ensures that true conditions are necessary for the branch decision.

(assert_invalid
  (module (func $true-condition-branch (block (br_if 0 (i32.const 1)) (i32.const 42))))
  "type mismatch"
)